fix: update swagger
